tests/baselines/reference/emitCapturingThisInTupleDestructuring1.errors.txt
tests/cases/compiler/emitCapturingThisInTupleDestructuring1.ts(3,17): error TS2339: Property '1' does not exist on type '[any]'.
tests/cases/compiler/emitCapturingThisInTupleDestructuring1.ts(3,29): error TS2339: Property '2' does not exist on type '[any]'.


==== tests/cases/compiler/emitCapturingThisInTupleDestructuring1.ts (2 errors) ====
    declare function wrapper(x: any);
    wrapper((array: [any]) => {
        [this.test, this.test1, this.test2] = array;  // even though there is a compiler error, we should still emit lexical capture for "this"
                    ~~~~~~~~~~
!!! error TS2339: Property '1' does not exist on type '[any]'.
                                ~~~~~~~~~~
!!! error TS2339: Property '2' does not exist on type '[any]'.
    });